# finm33200_Project_CredenceAnalytics

./: .dockerignore  .env.example  .gitignore  DEMO_GUIDE.md  DEPLOYMENT.md  Dockerfile  FINANCIAL_CREDIBILITY_TOOLKIT_REPORT.md  LICENSE  README.md  TOOLS.md  credence_analytics.md  eval_memo.py  input_example.txt  pyproject.toml  render.yaml  requirements.txt
docs/: AGENTIC_ARCHITECTURE.md  CLAUDE_PROJECT_SETUP.md  api_registration_guide.zh.html  asset_source_coverage.zh.md  index.html  index.zh.html
evaluation/: AI_USAGE.md  BUGS_FOUND.md  EVALUATION_SUMMARY.md  README.md  claims.json  claims_news.csv  claims_news.json  claims_news.xlsx  compare.py  equity_news_ui_audit_samples.json  equity_ui_audit_loop.py  equity_ui_audit_report.md  equity_ui_audit_results.json  equity_user_audit_report.md  equity_user_audit_results.json  equity_user_audit_samples.json  error_analysis.py  error_analysis_results.csv  eval_news.py  eval_news_results_heuristic.csv  eval_news_results_llm.csv  eval_sec_stock.py  eval_verdict.py  results.json  results_ai_fixed.csv  results_her_verdict.csv  results_heuristic.json  results_heuristic_fixed.csv  results_news_routingfix.json  results_news_verdict.csv  results_news_verdict_fixA.csv  results_news_verdict_v2.csv  results_news_verdict_v2.json  scorecard_classification.txt  scorecard_errors.txt  scorecard_verdict_v2.txt  sec_stock_eval.csv  sec_stock_eval.json  sec_stock_eval.md
examples/: demo_batch_input.csv  demo_equity_supported.json  demo_human_review.json  demo_mixed_assets.json  prefetched_aapl.json
tests/: test_argument.py  test_batch.py  (+22 more)
(+153 files in other folders)
