[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-credibility-toolkit"
version = "0.1.0"
description = "Provider-neutral credibility tools for US equity financial claims."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
financial-credibility = "financial_credibility.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
